<resources>
    <string name="app_name">ticket</string>
    <string name="login_form_title">Login</string>
    <string name="login_form_username">Email</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_login">LOGIN</string>
    <string name="register_form">REGISTER</string>
    <string name="scan">SCAN_QR</string>
    <string name="recharge">WALLET</string>
    <string name="mytickets">MY TICKETS</string>
    <string name="hello_blank_fragment">Recharge your Wallet</string>
</resources>