<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#000">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_margin="64dp"
        android:background="#fff"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="QrTrain"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="35sp" />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_form_title"
                android:textAlignment="center"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_form_username"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/activity_main_usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="48dp"
                android:hint="Enter Email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_form_password"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/activity_main_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:hint="Enter Password"/>

            <Button
                android:id="@+id/activity_main_loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_form_login"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New user?"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/register_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:minHeight="48dp"
                android:text="Click here to register"
                android:textColor="#0086D4"
                android:textSize="17dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>