<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#000">
    <androidx.cardview.widget.CardView
        android:fadingEdge="vertical"
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        android:background="#fff">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register_form"
                android:textAlignment="center"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_form_username"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date of Birth"
                android:textSize="22sp" />
            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_form_password"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirm Password"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_form"
                android:textSize="22sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>